[gd_scene load_steps=19 format=4 uid="uid://dtvv523jp3jk8"]

[ext_resource type="PackedScene" uid="uid://c5f6j57hyayss" path="res://Scenes/player.tscn" id="1_h7035"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_yhqyq"]
[ext_resource type="Texture2D" uid="uid://dlg2uyn7diefa" path="res://Assets/Water.png" id="2_r4kg2"]
[ext_resource type="Texture2D" uid="uid://cx0jcmbifs68k" path="res://Assets/Foam.png" id="3_ndhk1"]
[ext_resource type="Texture2D" uid="uid://cemleduwdg0kf" path="res://Assets/Rocks_03.png" id="4_6aga2"]
[ext_resource type="Texture2D" uid="uid://vou2adhcluo7" path="res://Assets/Rocks_02.png" id="5_80kit"]
[ext_resource type="Texture2D" uid="uid://bf4kcf35m3c40" path="res://Assets/Tilemap_Flat.png" id="6_iiels"]
[ext_resource type="PackedScene" uid="uid://c20r6ew25sq3s" path="res://Scenes/missile.tscn" id="8_guyaa"]
[ext_resource type="PackedScene" uid="uid://d3n5j0f5d7m2m" path="res://Scenes/canon.tscn" id="9_vhkgj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_manb6"]
texture = ExtResource("2_r4kg2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_jq154"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_manb6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pymuc"]
texture = ExtResource("3_ndhk1")
texture_region_size = Vector2i(192, 192)
0:0/animation_frame_0/duration = 0.1
0:0/animation_frame_1/duration = 0.1
0:0/animation_frame_2/duration = 0.1
0:0/animation_frame_3/duration = 0.1
0:0/animation_frame_4/duration = 0.1
0:0/animation_frame_5/duration = 0.1
0:0/animation_frame_6/duration = 0.1
0:0/animation_frame_7/duration = 0.1
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qgrhp"]
texture = ExtResource("4_6aga2")
texture_region_size = Vector2i(128, 128)
0:0/animation_frame_0/duration = 0.1
0:0/animation_frame_1/duration = 0.1
0:0/animation_frame_2/duration = 0.1
0:0/animation_frame_3/duration = 0.1
0:0/animation_frame_4/duration = 0.1
0:0/animation_frame_5/duration = 0.1
0:0/animation_frame_6/duration = 0.1
0:0/animation_frame_7/duration = 0.1
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rlcj2"]
texture = ExtResource("5_80kit")
texture_region_size = Vector2i(128, 128)
0:0/animation_frame_0/duration = 0.1
0:0/animation_frame_1/duration = 0.1
0:0/animation_frame_2/duration = 0.1
0:0/animation_frame_3/duration = 0.1
0:0/animation_frame_4/duration = 0.1
0:0/animation_frame_5/duration = 0.1
0:0/animation_frame_6/duration = 0.1
0:0/animation_frame_7/duration = 0.1
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_5nroq"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_pymuc")
sources/2 = SubResource("TileSetAtlasSource_qgrhp")
sources/3 = SubResource("TileSetAtlasSource_rlcj2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_stlsp"]
texture = ExtResource("6_iiels")
texture_region_size = Vector2i(64, 64)
6:2/0 = 0
6:2/0/terrain_set = 1
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_left_corner = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
5:0/0 = 0
5:0/0/terrain_set = 1
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_right_corner = 0
5:0/0/terrains_peering_bit/bottom_side = 0
6:0/0 = 0
6:0/0/terrain_set = 1
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/bottom_left_corner = 0
6:0/0/terrains_peering_bit/left_side = 0
7:0/0 = 0
7:0/0/terrain_set = 1
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/bottom_left_corner = 0
7:0/0/terrains_peering_bit/left_side = 0
8:0/0 = 0
8:0/0/terrain_set = 1
8:0/0/terrain = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:1/0 = 0
8:1/0/terrain_set = 1
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
8:2/0/terrain_set = 1
8:2/0/terrain = 0
8:2/0/terrains_peering_bit/top_side = 0
8:3/0 = 0
8:3/0/terrain_set = 1
8:3/0/terrain = 0
7:3/0 = 0
7:3/0/terrain_set = 1
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/left_side = 0
6:3/0 = 0
6:3/0/terrain_set = 1
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
5:3/0 = 0
5:3/0/terrain_set = 1
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:2/0 = 0
5:2/0/terrain_set = 1
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/top_side = 0
5:2/0/terrains_peering_bit/top_right_corner = 0
5:1/0 = 0
5:1/0/terrain_set = 1
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_right_corner = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 1
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_left_corner = 0
7:2/0/terrains_peering_bit/top_side = 0
7:1/0 = 0
7:1/0/terrain_set = 1
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/bottom_left_corner = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
6:1/0 = 0
6:1/0/terrain_set = 1
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/bottom_left_corner = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/bottom_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/top_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/left_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/right_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0

[sub_resource type="TileSet" id="TileSet_fm5w7"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(1, 0, 0.25098, 1)
terrain_set_1/mode = 0
terrain_set_1/terrain_0/name = "Terrain 0"
terrain_set_1/terrain_0/color = Color(0.3006, 0.128716, 1, 1)
sources/1 = SubResource("TileSetAtlasSource_stlsp")

[sub_resource type="Curve2D" id="Curve2D_aihrg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -581, -330, 0, 0, 0, 0, -580, -328, 0, 0, 0, 0, 572, -328, 0, 0, 0, 0, 572, 320, 0, 0, 0, 0, -581, 320, 0, 0, 0, 0, -581, -330)
}
point_count = 6

[node name="Main" type="Node2D" groups=["missile_scene"]]
position = Vector2(580, 328)
script = ExtResource("1_yhqyq")
missile_scene = ExtResource("8_guyaa")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Water" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD8//z/AAAAAAAAAAD7//z/AAAAAAAAAAD7//v/AAAAAAAAAAD6//v/AAAAAAAAAAD5//v/AAAAAAAAAAD4//v/AAAAAAAAAAD3//v/AAAAAAAAAAD8//v/AAAAAAAAAAD9//v/AAAAAAAAAAD+//v/AAAAAAAAAAD///v/AAAAAAAAAAAAAPv/AAAAAAAAAAABAPv/AAAAAAAAAAACAPv/AAAAAAAAAAADAPv/AAAAAAAAAAAEAPv/AAAAAAAAAAAFAPv/AAAAAAAAAAAGAPv/AAAAAAAAAAAHAPv/AAAAAAAAAAAIAPv/AAAAAAAAAAAIAPz/AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAADAAQAAAAAAAAAAAACAAQAAAAAAAAAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAD//wQAAAAAAAAAAAD+/wQAAAAAAAAAAAD9/wQAAAAAAAAAAAD8/wQAAAAAAAAAAAD7/wQAAAAAAAAAAAD6/wQAAAAAAAAAAAD5/wQAAAAAAAAAAAD4/wQAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wIAAAAAAAAAAAD3/wEAAAAAAAAAAAD3/wAAAAAAAAAAAAD3////AAAAAAAAAAD3//7/AAAAAAAAAAD3//3/AAAAAAAAAAD3//z/AAAAAAAAAAD4//z/AAAAAAAAAAD5//z/AAAAAAAAAAD6//z/AAAAAAAAAAD9//z/AAAAAAAAAAD+//z/AAAAAAAAAAD///z/AAAAAAAAAAAAAPz/AAAAAAAAAAABAPz/AAAAAAAAAAACAPz/AAAAAAAAAAADAPz/AAAAAAAAAAAEAPz/AAAAAAAAAAAFAPz/AAAAAAAAAAAGAPz/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAP//AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP3/AAAAAAAAAAAFAP3/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAP//AAAAAAAAAAAFAP7/AAAAAAAAAAD7//3/AAAAAAAAAAD6//3/AAAAAAAAAAD5//3/AAAAAAAAAAD4//3/AAAAAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4/wEAAAAAAAAAAAD5////AAAAAAAAAAD5//7/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wAAAAAAAAAAAAD7////AAAAAAAAAAD7//7/AAAAAAAAAAD5/wAAAAAAAAAAAAD4/wIAAAAAAAAAAAD4/wMAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wEAAAAAAAAAAAD3/wUAAAAAAAAAAAD4/wUAAAAAAAAAAAD5/wUAAAAAAAAAAAD6/wUAAAAAAAAAAAD7/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD//wUAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPr/AAAAAAAAAAAIAPr/AAAAAAAAAAAHAPr/AAAAAAAAAAAGAPr/AAAAAAAAAAAFAPr/AAAAAAAAAAAEAPr/AAAAAAAAAAADAPr/AAAAAAAAAAACAPr/AAAAAAAAAAABAPr/AAAAAAAAAAAAAPr/AAAAAAAAAAD///r/AAAAAAAAAAD+//r/AAAAAAAAAAD9//r/AAAAAAAAAAD8//r/AAAAAAAAAAD7//r/AAAAAAAAAAD6//r/AAAAAAAAAAD5//r/AAAAAAAAAAD4//r/AAAAAAAAAAD3//r/AAAAAAAAAAD2//r/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD2/wAAAAAAAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_jq154")

[node name="Foam" type="TileMapLayer" parent="Water"]
tile_map_data = PackedByteArray("AAD8/wMAAAAAAAAAAAADAAMAAAAAAAAAAAADAAIAAAAAAAAAAAADAAEAAAAAAAAAAAADAAAAAAAAAAAAAAADAP//AAAAAAAAAAADAP7/AAAAAAAAAAADAP3/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD6/wAAAgAAAAAAAAAIAPv/AgAAAAAAAAAGAAUAAgAAAAAAAAD9//3/AAAAAAAAAAD+//3/AAAAAAAAAAD///3/AAAAAAAAAAAAAP3/AAAAAAAAAAABAP3/AAAAAAAAAAACAP3/AAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAD//wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD5/wAAAwAAAAAAAAD8//v/AwAAAAAAAAD8/wUAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_5nroq")

[node name="Land" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9//3/AQABAAAAAAD+//3/AQABAAAAAAD///3/AQABAAAAAAAAAP3/AQABAAAAAAABAP3/AQABAAAAAAACAP3/AQABAAAAAAADAP3/AQACAAAAAAD8//3/AQAAAAAAAAD8//7/AQAAAAEAAAD8////AQAAAAEAAAD8/wAAAQAAAAEAAAD8/wEAAQAAAAEAAAD8/wIAAQAAAAEAAAD8/wMAAQAAAAIAAAD9/wMAAQABAAIAAAD+/wMAAQABAAIAAAD//wMAAQABAAIAAAAAAAMAAQABAAIAAAABAAMAAQABAAIAAAACAAMAAQABAAIAAAADAAMAAQACAAIAAAADAAIAAQACAAEAAAADAAEAAQACAAEAAAADAAAAAQACAAEAAAADAP//AQACAAEAAAADAP7/AQACAAEAAAD9//7/AQABAAEAAAD9////AQABAAEAAAD9/wAAAQABAAEAAAD9/wEAAQABAAEAAAD9/wIAAQABAAEAAAD+/wIAAQABAAEAAAD//wIAAQABAAEAAAAAAAIAAQABAAEAAAABAAIAAQABAAEAAAACAAIAAQABAAEAAAACAAEAAQABAAEAAAACAAAAAQABAAEAAAACAP//AQABAAEAAAABAP//AQABAAEAAAABAP7/AQABAAEAAAAAAP7/AQABAAEAAAD///7/AQABAAEAAAD+////AQABAAEAAAD+/wAAAQABAAEAAAD+/wEAAQABAAEAAAD//wEAAQABAAEAAAAAAAEAAQABAAEAAAAAAAAAAQABAAEAAAAAAP//AQABAAEAAAD/////AQABAAEAAAD+//7/AQABAAEAAAACAP7/AQABAAEAAAABAAAAAQABAAEAAAABAAEAAQABAAEAAAD//wAAAQABAAEAAAA=")
tile_set = SubResource("TileSet_fm5w7")

[node name="Player" parent="." instance=ExtResource("1_h7035")]
position = Vector2(-3, 10)

[node name="MissilePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_aihrg")

[node name="MissileSpawn" type="PathFollow2D" parent="MissilePath"]
position = Vector2(-581, -330)
rotation = 1.10715

[node name="Canon" parent="." instance=ExtResource("9_vhkgj")]
position = Vector2(-201, 200)
rotation = 0.785398
scale = Vector2(6, 6)

[node name="Canon2" parent="." instance=ExtResource("9_vhkgj")]
position = Vector2(207, -145)
rotation = 3.92699
scale = Vector2(6, 6)

[node name="Canon3" parent="." instance=ExtResource("9_vhkgj")]
position = Vector2(207, 204)
rotation = -0.785398
scale = Vector2(6, 6)

[node name="Canon4" parent="." instance=ExtResource("9_vhkgj")]
position = Vector2(-196, -135)
rotation = -3.92699
scale = Vector2(6, 6)

[node name="Missiles" parent="." instance=ExtResource("8_guyaa")]
position = Vector2(-575, -329)

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
